<!--
Assignment HW#3
strings.xml
Jarrod Norris, Andrew Schlesinger
-->

<resources>
    <string name="app_name">Movie Rating</string>
    <string name="btn_add">Add Movie</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete Movie</string>
    <string name="btn_show_year">Show List by Year</string>
    <string name="btn_show_rating">Show List by Rating</string>
    <string name="tv_main_title">My Favorite Movie</string>
    <string name="tv_add_movie">Add Movie</string>
    <string name="tv_add_movie_name">Name:</string>
    <string name="tv_add_movie_description">Description:</string>
    <string name="tv_add_movie_name_hint">Enter Movie Name (Up to 50 characters)</string>
    <string name="tv_genre">Genre:</string>
    <string name="tv_add_rating">Rating:</string>
    <string name="tv_add_movie_year">Year:</string>
    <string name="tv_movie_imdb">IMDB:</string>
    <string name="btn_add_movie">Add Movie</string>
    <string name="movie_name_issue">Movie must have a name</string>
    <string name="year_size">Year must be a four digit number (e.g. 1980)</string>
    <string name="year_less_than">Year cannot be less than 1921</string>
    <string name="year_greater_than">Year cannot be greater than 2018</string>
    <string name="desc_hint">Enter up to 1000 characters</string>
    <string name="imdb_format_issue">The IMDB address is not a valid url</string>
    <string name="tv_seek_bar" />
    <string name="tv_edit_title">Edit Movie</string>
    <string name="intent_canceled">The request was canceled</string>
    <string name="other_issue">Something went wrong</string>
    <string name="show_title">Movies by Year</string>
    <string name="show_gui_title">Movies by Year</string>
    <string name="title_header">Title:</string>
    <string name="description_header">Description:</string>
    <string name="genre_header">Genre:</string>
    <string name="rating_header">Rating:</string>
    <string name="year_header">Year:</string>
    <string name="imbd_header">IMBD:</string>
    <string name="finish_button">Finish</string>
    <string name="desc_req">Description is required</string>
    <string name="year_req">Year is required</string>
    <string name="imdb_req">IMDB url is required</string>
</resources>
