<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovie">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="7dp"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/movieNameTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_add_movie"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_add_movie_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addMovieDescriptionTextView"
        app:layout_constraintEnd_toStartOf="@+id/movieNameTextInput"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/movieNameTextInput"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addMovieDescriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Movie Name"
            android:maxLength="50" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/multiDescription"
        android:layout_width="345dp"
        android:layout_height="108dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="1000"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMovieDescriptionTextView" />

    <TextView
        android:id="@+id/addMovieDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="270dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_add_movie_description"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/multiDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieNameTextInput" />

    <TextView
        android:id="@+id/movieGenreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_genre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ratingTextView"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiDescription" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="277dp"
        android:layout_height="33dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movieGenreTextView"
        app:layout_constraintTop_toBottomOf="@+id/multiDescription" />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_add_rating"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addMovieYearTextView"
        app:layout_constraintEnd_toStartOf="@+id/yearTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieGenreTextView" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="237dp"
        android:layout_height="11dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="@integer/sb_max"
        app:layout_constraintBottom_toTopOf="@+id/yearTextInput"
        app:layout_constraintStart_toEndOf="@+id/ratingTextView"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/addMovieYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_add_movie_year"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imdbTextView"
        app:layout_constraintEnd_toStartOf="@+id/yearTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingTextView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/yearTextInput"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imdbTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addMovieYearTextView"
        app:layout_constraintTop_toBottomOf="@+id/seekBar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/yearEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/imdbTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_movie_imdb"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addMovieBtn"
        app:layout_constraintEnd_toStartOf="@+id/imdbTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMovieYearTextView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/imdbTextInput"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addMovieBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imdbTextView"
        app:layout_constraintTop_toBottomOf="@+id/yearTextInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/imdbEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/addMovieBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_add_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imdbTextInput" />

    <TextView
        android:id="@+id/sBarTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/yearTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />
</android.support.constraint.ConstraintLayout>